# Myagent_ai_news

./: .dockerignore  Dockerfile  README.md  db_test.py  push_to_mongo.py  pyproject.toml  render.yaml  report.json  requirements.txt  test_py.py
src/: crew.py  main.py  mongodb_connection.py
src/config/: agents.yaml  models.py  tasks.yaml
src/tools/: custom_tool.py
