[project]
name = "myagent_udate"
version = "0.1.0"
description = "MyAgent_udate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "certifi>=2026.2.25",
    "crewai[tools]==1.11.0",
    "dnspython>=2.8.0",
    "fastapi>=0.135.2",
    "google-api-python-client>=2.193.0",
    "google-genai>=1.69.0",
    "mangodb>=0.9",
    "motor>=3.7.1",
    "pymongo>=4.16.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
myagent_udate = "myagent_udate.main:run"
run_crew = "myagent_udate.main:run"
train = "myagent_udate.main:train"
replay = "myagent_udate.main:replay"
test = "myagent_udate.main:test"
run_with_trigger = "myagent_udate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.crewai]
type = "crew"


[tool.uv]
override-dependencies = [
    "lancedb==0.30.0"
]
